--- a/Medicare_Funnel_Analysis.ipynb
+++ b/Medicare_Funnel_Analysis.ipynb
@@ -5,9 +5,9 @@
    "id": "56006b19",
    "metadata": {},
    "source": [
-    "# SVG BA Systems Analyst Project\n",
+    "# Medicare Funnel Analysis\n",
     "\n",
-    "This project was completed as part of an interview process for a **Business Analytics Systems Analyst** role at Spring Venture Group. The dataset simulated real-world insurance sales activity, and the goal was to analyze agent performance, sales pipeline velocity, and quota alignment.\n",
+    "This project analyses lead to app conversion rates to identify the top agents and to identify factors that make them successful. The dataset simulated real-world insurance sales activity, and the goal was to analyze agent performance, sales pipeline velocity, and quota alignment.\n",
     "                           \n",
     "#### Key Definitions\t\t\t\t\t\t\t\n",
     "- Agent: licensed insurance agent, authorized to make sales calls to potential customers & submit policies to carriers on their behalf\t\t\t\t\t\t\t\n",
